todos as objects

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,8 @@ html
 	link(rel="stylesheet", href="http://localhost:2500/css/styles.css")
 body
 	.container
-		h1
-			a(href="/")="MY APP"
+		h3
+			a(href="/") code is a poetry
 		h3= title
 		hr
 		ul.nav.nav-pills
